edition = "2023";

package ginbot.proto;

option go_package = "github.com/lasikuu/GinBot/pkg/gen/ginbot/proto";

import "google/protobuf/empty.proto";

enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_OK = 1;
  HEALTH_STATUS_ERROR = 2;
}

service UtilityService {
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResp);
  rpc Help(HelpReq) returns (HelpResp);
  rpc Ping(google.protobuf.Empty) returns (PingResp);
}

message HealthCheckResp {
  // Status of the service
  HealthStatus status = 1;
}

message HelpReq {
  // Command to get help for
  string command = 1;
}

message HelpResp {
  // Help message
  string message = 1;
}

message PingResp {
  // Pong message
  string message = 1;
}
